--- a/home.css
+++ b/home.css
@@ -1,126 +1,142 @@
 /*ホームA*/
-.dad{
-	position: relative;
+
+.dad {
+    position: relative;
 }
-#home-a-img{
-	overflow: hidden;
+
+#home-a-img {
+    overflow: hidden;
 }
-#home-a-icon{
-	width: 200px;
-	height: 200px;
-	position: absolute;
-	right: 10px;
-	bottom: 10px;
-	border-radius: 50%;
+
+#home-a-icon {
+    width: 200px;
+    height: 200px;
+    position: absolute;
+    right: 10px;
+    bottom: 10px;
+    border-radius: 50%;
 }
-#home-a h1{
-	background-color: rgba(0,21,36,0.2);
-	padding: 20px;
-	font-size: 300%;
-	color: white;
-	font-weight: bold;
-	position: absolute;
-	top: 0;
-	left: 0;
+
+#home-a h1 {
+    background-color: rgba(0, 21, 36, 0.2);
+    padding: 20px;
+    font-size: 300%;
+    color: white;
+    font-weight: bold;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
-#home-c-col-cards{
-	height: 500px;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	align-content: center;
+
+#home-c-col-cards {
+    height: 500px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
 }
+
 #home-e-col-cards h2,
-#home-e-col-cards h3{
-	text-align: center;
+#home-e-col-cards h3 {
+    text-align: center;
 }
-#home-d-col-cards{
-	height: 400px;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: flex-start;
-	align-content: center;
+
+#home-d-col-cards {
+    height: 400px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    align-content: center;
 }
 
 #home-b-col-one,
-#home-b-col-two{
-	text-align: center;
-	vertical-align: top;
-	margin: 20px 0;
-	
+#home-b-col-two {
+    text-align: center;
+    vertical-align: top;
+    margin: 20px 0;
 }
+
 
 /*ホームB*/
-#home-b-con{
-	margin:  8% 0;
-	width: 100%;
-}
-#home-b-r{
-	background-color: #EBEBEB;
-	height: auto;
-}
-.home-b-r h3, h4, p{
-	color: #484848;
+
+#home-b-con {
+    margin: 8% 0;
+    width: 100%;
 }
 
+#home-b-r {
+    background-color: #EBEBEB;
+    height: auto;
+}
+
+.home-b-r h3,
+h4,
+p {
+    color: #484848;
+}
+
+
 /*ホームC*/
-#home-c-r h2{
-	text-align: center;
-	margin: 10px;
+
+#home-c-r h2 {
+    text-align: center;
+    margin: 10px;
 }
 
 
 /*ホームD*/
-@media screen and (max-width: 767px){
-	#home-c-col-cards{
-		height: auto;
-    }
-    #home-d-col-cards{
-    	height: auto;
-    }
-    #home-d-r{
-    	display: flex;
-    	flex-direction: column-reverse;
-    }
 
-
+@media screen and (max-width: 767px) {
+    #home-c-col-cards {
+        height: auto;
+    }
+    #home-d-col-cards {
+        height: auto;
+    }
+    #home-d-r {
+        display: flex;
+        flex-direction: column-reverse;
+    }
 }
+
 
 /*フッター*/
+
 #home-footer {
-	background-color: #2b2f33;
-	margin: 0 0 -300px 0;
-	width: 100%;
-	height: 100%;
-}
-#home-footer h5{
-	margin-top: 20px;
-	margin-bottom: 2px;
-	color: #868686;
-}
-#home-footer hr{
-	margin-top: 10px;
-	margin-bottom: 15px;
-	border: 0.5px solid #4b4b4b;
+    background-color: #2b2f33;
+    margin: 0 0 -300px 0;
+    width: 100%;
+    height: 100%;
 }
 
-#home-footer a{
-	text-decoration: none;
-	color: #ffff;
-	opacity: 0.6;
+#home-footer h5 {
+    margin-top: 20px;
+    margin-bottom: 2px;
+    color: #868686;
 }
+
+#home-footer hr {
+    margin-top: 10px;
+    margin-bottom: 15px;
+    border: 0.5px solid #4b4b4b;
+}
+
+#home-footer a {
+    text-decoration: none;
+    color: #ffff;
+    opacity: 0.6;
+}
+
 #home-footer a:hover {
-	opacity: 1;
+    opacity: 1;
 }
+
 .copy {
-	margin-top: 50px;
-	margin-bottom: 20px;
-	color: #868686;
-	font-size: 100%;
-	text-align: center;
+    margin-top: 50px;
+    margin-bottom: 20px;
+    color: #868686;
+    font-size: 100%;
+    text-align: center;
 }
-
-
-
